# AI-Data-Analyst-Agent

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt  test.py
alembic/: env.py
alembic/versions/: 4773df0ad395_added_business_summary_in_dataset_table.py  47dcb91e56ff_added_dataset_type.py  c5c4b25a20c4_initial_migration.py  fc63ded60ff1_added_new_columns_in_dataset_table.py
backend/: config.py  main.py
backend/agents/: data_cleaning_agent.py  data_understanding_agent.py  insights_agent.py  report_agent.py  sql_agent.py  visualization_agent.py
backend/api/: auth.py  file_upload.py  insight.py  report.py  user_query.py  visualization.py
backend/database/: database.py  dependency.py  session.py
backend/models/: dataset.py  user.py
backend/prompts/: business_understanding_prompt.py  cleaning_prompt.py  insight_prompt.py  sql_prompt.py  sql_summary_prompt.py  visualization_prompt.py
backend/schemas/: user.py
backend/services/: LLM_service.py  cleaning_executor.py  data_processing.py  insight_service.py  pdf_generator.py  report_service.py  sql_executor.py  visualization_service.py
backend/template/: report_template.py
backend/utils/: jwt.py  logger.py  security.py  validators.py
frontend/: app.py
frontend/pages/: chat.py  dashboard.py  insights.py  login.py  register.py  upload.py  visualization.py
frontend/services/: api.py  auth.py  insights.py  query.py  upload.py  visualization.py
frontend/styles/: style.css
frontend/utils/: session.py
