[project]
name = "ai-data-analyst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.5",
    "duckdb>=1.5.4",
    "fastapi>=0.139.0",
    "google-generativeai>=0.8.6",
    "langchain>=1.3.13",
    "langchain-google-genai>=4.2.7",
    "langgraph>=1.2.9",
    "numpy>=2.4.6",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "plotly>=6.9.0",
    "prophet>=1.3.0",
    "psycopg2-binary>=2.9.12",
    "pwdlib[argon2]>=0.3.0",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "reportlab>=5.0.0",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "streamlit>=1.59.2",
    "typing-extensions>=4.16.0",
    "uvicorn[standard]>=0.51.0",
]
